Changed modal css position to Fixed to avoid need to scroll to find modal on mobile phone.

--- a/css/awards.css
+++ b/css/awards.css
@@ -25,7 +25,7 @@
 /* The Modal (background) */
 .modal {
   display: none;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   padding-top: 0px;
   left: 0;
