--- a/css/uxSlideshow.css
+++ b/css/uxSlideshow.css
@@ -19,7 +19,7 @@
 /* The Modal (background) */
 .modal {
   display: none;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   padding-top: 0px;
   left: 0;
